Fixed Header content in mobile from clipping the edge of the screen

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -59,3 +59,10 @@
     text-align: left;
     margin-bottom: 5px;
 }
+
+@media (max-width: 700px) {
+    .card-container {
+        padding-top: 75px;
+    }
+    
+}
